# generate-ai

./: Cargo.toml
src/: lib.rs
src/open_ai/: client.rs  error.rs  mod.rs  model.rs  request.rs  response.rs  role.rs  utils.rs
