[package]
name = "chatgpt-generative-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
futures = { version = "0.3", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
